fix coordinate nav item spacing (#197)

--- a/sitemedia/scss/base/_navigation.scss
+++ b/sitemedia/scss/base/_navigation.scss
@@ -223,7 +223,7 @@
 
       &:nth-child(4) {
         transform: rotateZ(90deg) translate(9.5rem, -4rem);
-        padding-left: 1.3em;
+        // padding-left: 1.3em;
       }
 
       &:nth-child(1),
